[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/DeathPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/DeathPopup.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI.gd" type="Script" id=3]
[ext_resource path="res://scenes/Timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/coin.png" type="Texture" id=5]
[ext_resource path="res://scenes/Timer.gd" type="Script" id=6]
[ext_resource path="res://scenes/LevelCompletedPopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/LevelCompletedPopup.gd" type="Script" id=8]
[ext_resource path="res://scenes/EquippedSkill.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/SkillWheel.tscn" type="PackedScene" id=10]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="DeathPopup" parent="." instance=ExtResource( 1 )]
visible = false
script = ExtResource( 2 )

[node name="LevelCompletedPopup" parent="." instance=ExtResource( 7 )]
visible = false
script = ExtResource( 8 )

[node name="SkillWheel" parent="." instance=ExtResource( 10 )]
position = Vector2( 620, 340 )

[node name="Timer" parent="." instance=ExtResource( 4 )]
layer = 0
script = ExtResource( 6 )

[node name="EquippedSkill" parent="." instance=ExtResource( 9 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_bottom = -580.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1220.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/separation = 5

[node name="UICoin1" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="UICoin2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
margin_left = 85.0
margin_right = 165.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 5 )
stretch_mode = 5

[node name="UICoin3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
margin_left = 170.0
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 5 )
stretch_mode = 5

[connection signal="dash_skill_equipped" from="SkillWheel" to="." method="_on_SkillWheel_dash_skill_equipped"]
[connection signal="dash_skill_equipped" from="SkillWheel" to="EquippedSkill" method="_on_SkillWheel_dash_skill_equipped"]
[connection signal="double_jump_skill_equipped" from="SkillWheel" to="." method="_on_SkillWheel_double_jump_skill_equipped"]
[connection signal="double_jump_skill_equipped" from="SkillWheel" to="EquippedSkill" method="_on_SkillWheel_double_jump_skill_equipped"]
[connection signal="skill_menu_closed" from="SkillWheel" to="." method="_on_SkillWheel_skill_menu_closed"]
[connection signal="skill_menu_closed" from="SkillWheel" to="Timer" method="_on_SkillWheel_skill_menu_closed"]
[connection signal="skill_menu_closed" from="SkillWheel" to="EquippedSkill" method="_on_SkillWheel_skill_menu_closed"]
[connection signal="skill_menu_opened" from="SkillWheel" to="." method="_on_SkillWheel_skill_menu_opened"]
[connection signal="skill_menu_opened" from="SkillWheel" to="Timer" method="_on_SkillWheel_skill_menu_opened"]
[connection signal="skill_menu_opened" from="SkillWheel" to="EquippedSkill" method="_on_SkillWheel_skill_menu_opened"]
